2002-05-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/print.c (sheet_print) : pass updated print-config to print-dialog
	
2002-05-01  Christophe Merlet  <christophe@merlet.net>

	* schemas/gnumeri-dialogs.schemas : Replaced // with /.
	* src/Makefile.am : Added main-application.c to $EXTRA_DIST.

2002-04-30  Jody Goldberg <jody@gnome.org>

	* src/dependent.c (cb_range_contained_collect) : begin support for
	  GnmRenderedRegion by adding support for non relocatable dependents.
	(cb_single_contained_collect) : ditto.

2002-04-29  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-pane.c (gnumeric_pane_header_init) : set a
	  non-contraining scrollregion here in case something scrolls before we
	  are realized and a real region is assigned.

	* src/sheet-object.c (sheet_object_clone_sheet) : range == NULL is legal

	* src/sheet.c (sheet_clone_colrow_info_item) : Use colrow_copy.
	  While we're here use sheet_colrow_fetch too.
	(sheet_dup) : rename from sheet_duplicate to be consistent.

2002-04-29  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-04-28  Jody Goldberg <jody@gnome.org>

	* src/item-cursor.c : no need to do the gdk_flushes here.
	  the grab/ungrab wrappers handle it.

2002-04-29  Jon K Hellan  <hellan@acm.org>

	* src/bonobo-io.c (deserialize_wb_from_xml_stream): New
	function. Factored out of gnumeric_bonobo_read_from_stream.
	Deserializes a Workbook from an XML stream.
	(read_from_stream): New function. Factored out of
	gnumeric_bonobo_read_from_stream. Handles bonobo stream oriented
	aspect of stream deserialization task.
	(gnumeric_bonobo_read_from_stream): Refactor so that only Workbook
	/ WorkbookView / WorkbookControl aspects of deserialization are
	handled here. The stream and XML concerns are factored out into
	separate functions. Also, fix reload bugs by making code more
	similar to wb_view_open. Still not perfect, but better.
